feat: add Purchase page

--- a/assets/styles/_theme.scss
+++ b/assets/styles/_theme.scss
@@ -64,6 +64,14 @@
   --color-page-alchemy-small-circle-border: #572e02;
   --color-page-alchemy-panel-border: #606060;
   --color-page-alchemy-panel-text: #fff;
+  // Page Purchase
+  --color-page-purchase-border: #3C3C3C;
+  --color-page-purchase-panel-mobile-bg: #000;
+  --color-page-purchase-selected-method-border: #4DB864;
+  --color-page-purchase-more-btn-color: #fff;
+  --color-page-purchase-user-panel-bg: #1B1B1B;
+  --color-page-purchase-user-input-bg: #171717;
+  --color-page-purchase-user-input-border: #3C3C3C;
 }
 
 .light-mode {
@@ -132,4 +140,12 @@
   --color-page-alchemy-small-circle-border: #E6B17C;
   --color-page-alchemy-panel-border: #fff;
   --color-page-alchemy-panel-text: #767676;
+  // Page Purchase
+  --color-page-purchase-border: #EDE6E0;
+  --color-page-purchase-panel-mobile-bg: #f7f4f4;
+  --color-page-purchase-selected-method-border: #C9A788;
+  --color-page-purchase-more-btn-color: #C9A788;
+  --color-page-purchase-user-panel-bg: #F9F9F9;
+  --color-page-purchase-user-input-bg: #F9F9F9;
+  --color-page-purchase-user-input-border: #DFDFDF;
 }
